--- a/templates/bjh.html
+++ b/templates/bjh.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bjkbkj</title>
+    <title>now I try again</title>
 </head>
 <body>
 
