--- a/templates/addNewClient.html
+++ b/templates/addNewClient.html
@@ -9,23 +9,49 @@
      <script>
          function checkDates()
          {
-<!--            var BirthDate=document.getElementsByName("bday");-->
-<!--            var currentDate = new Date(new Date().getTime() + 24 * 60 * 60 * 1000);-->
-<!--            var day = currentDate.getDate()-->
-<!--            var month = currentDate.getMonth() + 1-->
-<!--            var year = currentDate.getFullYear()-->
-<!--            document.write("<b>" + day + "-" + month + "-" + year + "</b>")-->
-           var positiveDate=document.getElementsByName("positiveDate").getTime();
-           var RecoveryDate=document.getElementsByName("RecoveryDate").getTime();
-            if(startTime>endTime)
-            {
-                document.getElementById("message1").innerHTML="The recovery date cannot be before the sick date";
-                return false
-            }
-            if
-
+            var today = new Date().getTime();
+            var birthday = document.getElementsById("biday").value().getTime();
+             if (today - birthday < 0)
+             {
+                alert("the func is exe");
+                 return false
+             }
          }
-     </script>
+
+</script>
+<!--    alert("the func is exe");-->
+<!--         var name= document.getElementsById("namee")-->
+<!--           if (name =="xax"){-->
+<!--            document.getElementById("message1").innerHTML="Birthday cant be a future date";-->
+<!--            return false-->
+<!--           }-->
+
+<!--     var today = new Date().getTime();-->
+<!--            var birthday = document.getElementsById("biday").value().getTime();-->
+<!--             if (today - birthday < 0)-->
+<!--             {-->
+<!--                 document.getElementById("message1").innerHTML="Birthday cant be a future date";-->
+<!--                 return false-->
+<!--             }-->
+<!--             if (document.getElementsById("bday").getTime() > correctDate.getTime())-->
+<!--             {-->
+<!--              document.getElementById("message1").innerHTML="Birthday cant be a future date";-->
+<!--             }-->
+<!--    -->
+    <!--            var BirthDate=document.getElementsByName("bday");-->
+    <!--            var currentDate = new Date(new Date().getTime() + 24 * 60 * 60 * 1000);-->
+    <!--            var day = currentDate.getDate()-->
+    <!--            var month = currentDate.getMonth() + 1-->
+    <!--            var year = currentDate.getFullYear()-->
+    <!--            document.write("<b>" + day + "-" + month + "-" + year + "</b>")-->
+<!--               var positiveDate=document.getElementsByName("positiveDate").getTime();-->
+<!--               var RecoveryDate=document.getElementsByName("RecoveryDate").getTime();-->
+<!--                if(startTime>endTime)-->
+<!--                {-->
+<!--                    document.getElementById("message1").innerHTML="The recovery date cannot be before the sick date";-->
+<!--                    return false-->
+<!--                }-->
+
 </head>
 </head>
 <body>
@@ -33,17 +59,18 @@
 		<h1>Add new client to HMO</h1>
 	</nav>
 	<div class="jumbotron">
-		<form class="form-group" onsubmit="checkDates()" action="/addNewClient" method="post">
+		<form class="form-group" onsubmit= "return checkDates()" action="/addNewClient" method="post">
 			<label >please fill in the client's details:</label>
             <br>
             <label>First name</label>
-			<input type="text" name="fname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters" ><br>
+			<input type="text" id="namee" name="fname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters" ><br>
             <label>Last name</label>
             <input type="text" name="lname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters"  ><br>
             <label>ID</label>
             <input type="text" name="id" size=9 class="form-control" required pattern="[0-9]{9}" title="id contain exactly 9 numbers" ><br>
             <label>Birthday</label>
-            <input type="date" name="bday" class="form-control" required ><br>
+            <input type="date" name="bday" id="biday" class="form-control" required ><br>
+            <span id="message1" style="color:red"></span><br>
             <label>Address</label>
             <input type="text" name="street" placeholder="street" class="form-control" required pattern="[A-Za-z]*" title="Street contain only letters" >
             <input type="text" name="number" placeholder="number" class="form-control" required pattern="[0-9]*" title="Street's number contain numbers" >
@@ -56,7 +83,7 @@
              <input type="date" name="positiveDate" class="form-control"><br>
             <label>Covid Recovery Date</label>
              <input type="date" name="recoveryDate" class="form-control"><br>
-            <span id="message1" style="color:red"></span><br><br>
+            <span id="message2" style="color:red"></span><br><br>
 
              <label>get first vaccine?</label>
             <input type="radio" name ="get1" value="Yes"/>Yes
