--- a/templates/addNewClient.html
+++ b/templates/addNewClient.html
@@ -6,52 +6,33 @@
 <!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
 <!--	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
 <!--	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
-     <script>
-         function checkDates()
-         {
-            var today = new Date().getTime();
-            var birthday = document.getElementsById("biday").value().getTime();
-             if (today - birthday < 0)
-             {
-                alert("the func is exe");
-                 return false
-             }
-         }
+    <script>
+        function check()
+        {
+            var today = new Date();
+            var birthday = document.getElementById("biday").value;
+            console.log(birthday)
+            var positive = new Date(document.getElementById("positiveDate").value);
+            console.log("positive",positive)
+            var recovery = new Date(document.getElementById("recoveryDate").value);
+            console.log("recovery",recovery)
+            if(!birthday)
+            {
+                 console.log("no birthday",birthday)
+                return false;
+            }
+            else
+            {
+                if(birthday >today)
+                {
+                    console.log("birthday",birthday)
+                    document.getElementById("message1").innerHTML = "Invalid date, birthday can't be a future date";
+                    return false;
+                }
+            }
+        }
 
 </script>
-<!--    alert("the func is exe");-->
-<!--         var name= document.getElementsById("namee")-->
-<!--           if (name =="xax"){-->
-<!--            document.getElementById("message1").innerHTML="Birthday cant be a future date";-->
-<!--            return false-->
-<!--           }-->
-
-<!--     var today = new Date().getTime();-->
-<!--            var birthday = document.getElementsById("biday").value().getTime();-->
-<!--             if (today - birthday < 0)-->
-<!--             {-->
-<!--                 document.getElementById("message1").innerHTML="Birthday cant be a future date";-->
-<!--                 return false-->
-<!--             }-->
-<!--             if (document.getElementsById("bday").getTime() > correctDate.getTime())-->
-<!--             {-->
-<!--              document.getElementById("message1").innerHTML="Birthday cant be a future date";-->
-<!--             }-->
-<!--    -->
-    <!--            var BirthDate=document.getElementsByName("bday");-->
-    <!--            var currentDate = new Date(new Date().getTime() + 24 * 60 * 60 * 1000);-->
-    <!--            var day = currentDate.getDate()-->
-    <!--            var month = currentDate.getMonth() + 1-->
-    <!--            var year = currentDate.getFullYear()-->
-    <!--            document.write("<b>" + day + "-" + month + "-" + year + "</b>")-->
-<!--               var positiveDate=document.getElementsByName("positiveDate").getTime();-->
-<!--               var RecoveryDate=document.getElementsByName("RecoveryDate").getTime();-->
-<!--                if(startTime>endTime)-->
-<!--                {-->
-<!--                    document.getElementById("message1").innerHTML="The recovery date cannot be before the sick date";-->
-<!--                    return false-->
-<!--                }-->
-
 </head>
 </head>
 <body>
@@ -59,7 +40,7 @@
 		<h1>Add new client to HMO</h1>
 	</nav>
 	<div class="jumbotron">
-		<form class="form-group" onsubmit= "return checkDates()" action="/addNewClient" method="post">
+		<form class="form-group" onsubmit= "return check()" action="/addNewClient" method="post">
 			<label >please fill in the client's details:</label>
             <br>
             <label>First name</label>
@@ -67,9 +48,10 @@
             <label>Last name</label>
             <input type="text" name="lname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters"  ><br>
             <label>ID</label>
-            <input type="text" name="id" size=9 class="form-control" required pattern="[0-9]{9}" title="id contain exactly 9 numbers" ><br>
+            <input type="text" id="idC" name="id" size=9 class="form-control" required pattern="[0-9]{9}" title="id contain exactly 9 numbers" ><br>
             <label>Birthday</label>
-            <input type="date" name="bday" id="biday" class="form-control" required ><br>
+            <input type="date" name="bday" id="biday" class="form-control" required  ><br>
+<!--            required-->
             <span id="message1" style="color:red"></span><br>
             <label>Address</label>
             <input type="text" name="street" placeholder="street" class="form-control" required pattern="[A-Za-z]*" title="Street contain only letters" >
@@ -80,11 +62,13 @@
             <label>Phone</label>
             <input type="tel" name="phone" size=10 class="form-control" required pattern="[0-9]{10}"title="Phone contain exactly 10 numbers" ><br>
             <label>Covid Positive Date</label>
-             <input type="date" name="positiveDate" class="form-control"><br>
+             <input type="date" id="positiveDate" name="positiveDate" class="form-control"><br>
+            <span id="message2" style="color:red"></span><br>
             <label>Covid Recovery Date</label>
-             <input type="date" name="recoveryDate" class="form-control"><br>
-            <span id="message2" style="color:red"></span><br><br>
-
+             <input type="date" id="recoveryDate" name="recoveryDate" class="form-control"><br>
+            <span id="message3" style="color:red"></span><br>
+            <span id="message4" style="color:red"></span><br>
+            <br>
              <label>get first vaccine?</label>
             <input type="radio" name ="get1" value="Yes"/>Yes
             <input type="radio" name ="get1" value="No" checked/>No<br>
@@ -96,7 +80,7 @@
                 <option value="AstraZeneca">AstraZeneca</option>
             </select><br>
             <label>get vaccine Date</label>
-             <input type="date" name="vaccineDate1"  class="form-control"><br>
+             <input type="date" id="vacd1" name="vaccineDate1"  class="form-control"><br>
 
             <label>get second vaccine?</label>
             <input type="radio" name ="get2" value="Yes"/>Yes
@@ -110,7 +94,7 @@
                 <option value="AstraZeneca">AstraZeneca</option>
             </select><br>
             <label>get vaccine Date</label>
-             <input type="date" name="vaccineDate2"  class="form-control"><br>
+             <input type="date" id="vacd2" name="vaccineDate2"  class="form-control"><br>
 
              <label>get third vaccine?</label>
              <input type="radio" name ="get3" value="Yes"/>Yes
@@ -124,7 +108,7 @@
             </select><br>
 
             <label>get vaccine Date</label>
-             <input type="date" name="vaccineDate3"  class="form-control"><br>
+             <input type="date" id="vacd3" name="vaccineDate3"  class="form-control"><br>
 
             <label>get fourth vaccine?</label>
              <input type="radio" name ="get4" value="Yes"/>Yes
@@ -137,11 +121,10 @@
                 <option value="AstraZeneca">AstraZeneca</option>
             </select><br>
             <label>get vaccine Date</label>
-             <input type="date" name="vaccineDate4"  class="form-control"><br>
+             <input type="date" id=vacd4" name="vaccineDate4"  class="form-control"><br>
 
             <br>
 			<button class="btn btn-primary" type="submit" name="submit" value="add">Submit</button>
-<!--			<button class="btn btn-danger" type="submit" name="submit" value="delete">Delete</button>-->
 		</form>
 
 	</div>
