--- a/templates/addNewClient.html
+++ b/templates/addNewClient.html
@@ -6,70 +6,196 @@
 <!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
 <!--	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
 <!--	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+    <style>
+    h1
+    {
+        font-family: calibri;
+		font-size: 40px;
+		text-align: center;
+    }
+    h2
+    {
+        font-family: calibri;
+		font-size: 25px;
+		text-align: left;
+    }
+    label
+    {
+		font-family: calibri;
+		font-size: 15px;
+		text-align: center;
+		font-weight: normal;
+	}
+    form
+    {
+
+        text-align: left;
+		font-weight: normal;
+		font-family: calibri;
+    }
+     button
+    {
+    	padding =18px 18px;
+    	border-radius: 10px;
+    	border: 1px solid black;
+    	font-size: 20px;
+    	font-family: calibri;
+    	background-color: #8FBC8F;
+    }
+    </style>
     <script>
-        function check()
+    function check()
+    {
+        var today = new Date()
+        let newToday = today.toLocaleDateString('en-CA')
+        var birthday = document.getElementById("biday").value;
+        var positive = document.getElementById("positiveDate").value;
+        var recovery = document.getElementById("recoveryDate").value;
+
+        var bDay= new Date(document.getElementById("biday").value)
+        bDay.setMonth(bDay.getMonth()+6);
+        var sixFromBDay= bDay.toLocaleDateString('en-CA');
+<!--        console.log("sixFromBDay",sixFromBDay);-->
+
+        var vac1 = document.getElementById("vacD1").value;
+        var tempvac1 = new Date(vac1);
+<!--        console.log("vac1",vac1);-->
+        tempvac1.setMonth(tempvac1.getMonth()+1);
+        var monthFromVac1= tempvac1.toLocaleDateString('en-CA');
+<!--        console.log("monthFromVac1",monthFromVac1);-->
+
+        var vac2 = document.getElementById("vacD2").value;
+        var tempvac2= new Date(vac2);
+<!--        console.log("vac2",vac2);-->
+        tempvac2.setMonth(tempvac2.getMonth()+5);
+        var fiveFromVac2= tempvac2.toLocaleDateString('en-CA');
+<!--        console.log("fiveFromVac2",fiveFromVac2);-->
+
+        var vac3 = document.getElementById("vacD3").value;
+        var tempvac3= new Date(vac3)
+<!--        console.log("vac3",vac3);-->
+        tempvac3.setMonth(tempvac3.getMonth()+4);
+        var fourFromVac3= tempvac3.toLocaleDateString('en-CA');
+<!--        console.log("fourFromVac3",fourFromVac3);-->
+
+        var vac4 = document.getElementById("vacD4").value;
+<!--        console.log("vac4",vac4);-->
+
+        var positive7Days= document.getElementById("positiveDate").value;
+        var addSevenDays = new Date(positive7Days);
+        addSevenDays.setDate(addSevenDays.getDate() + 7);
+        var checkDays = addSevenDays.toLocaleDateString('en-CA');
+<!--        console.log("checkDays",checkDays);-->
+
+        document.getElementById("message4").innerHTML = " ";
+        if (birthday < newToday)
         {
-            var today = new Date();
-            var birthday = document.getElementById("biday").value;
-            console.log(birthday)
-            var positive = new Date(document.getElementById("positiveDate").value);
-            console.log("positive",positive)
-            var recovery = new Date(document.getElementById("recoveryDate").value);
-            console.log("recovery",recovery)
-            if(!birthday)
+            document.getElementById("message1").innerHTML = " ";
+            if ( (positive > birthday) || (!positive))
             {
-                 console.log("no birthday",birthday)
-                return false;
+                document.getElementById("message2").innerHTML = " ";
+                if ( (recovery > checkDays) || ( !recovery ) )
+                {
+                   document.getElementById("message3").innerHTML = " ";
+                   document.getElementById("message4").innerHTML = " ";
+                   document.getElementById("message4").innerHTML = " ";
+                   console.log("vaccine1 good" ,sixFromBDay);
+                   console.log(vac1);
+                   if( (!vac1) ||(sixFromBDay <= vac1) )
+                   {
+                         document.getElementById("vaccine1").innerHTML = " ";
+                          console.log("vaccine1 good");
+                         if( (!vac2) || (monthFromVac1 <= vac2) )
+                         {
+                            document.getElementById("vaccine2").innerHTML = " ";
+                            if ( (!vac3) || (fiveFromVac2 <= vac3) )
+                            {
+                                document.getElementById("vaccine3").innerHTML = " ";
+                                if( (!vac4) || (fourFromVac3 <= vac4) )
+                                {
+                                    document.getElementById("vaccine4").innerHTML = " ";
+                                    if(vac4 <= today)
+                                    {
+                                        document.getElementById("vaccine5").innerHTML = " ";
+                                        return true;
+                                    }
+                                    else
+                                    {
+                                        document.getElementById("vaccine5").innerHTML = "Cant be a future date";
+                                    }
+                                }
+                                else
+                                {
+                                    document.getElementById("vaccine4").innerHTML = "Receiving a fourth vaccine is at least four month after receiving the third vaccine";
+                                }
+                            }
+                            else
+                            {
+                                 document.getElementById("vaccine3").innerHTML = "Receiving a third vaccine is at least five month after receiving the second vaccine";
+                            }
+                         }
+                         else
+                         {
+                            document.getElementById("vaccine2").innerHTML = "Receiving a second vaccine is at least one month after receiving the first vaccine";
+                         }
+                   }
+                   else
+                   {
+                        document.getElementById("vaccine1").innerHTML = "Receiving first vaccine is at least 6 months after the date of birth";
+                   }
+                }
+                else
+                {
+                    document.getElementById("message3").innerHTML = "Invalid date, recovery date should be at least 7 days after the positive date";
+                }
             }
             else
             {
-                if(birthday >today)
-                {
-                    console.log("birthday",birthday)
-                    document.getElementById("message1").innerHTML = "Invalid date, birthday can't be a future date";
-                    return false;
-                }
+                document.getElementById("message2").innerHTML = "Invalid date, positive covid date can't be before birthday";
             }
         }
+        else
+        {
+            document.getElementById("message1").innerHTML = "Invalid date, birthday can't be a future date";
+        }
+        return false;
+    }
 
 </script>
 </head>
-</head>
 <body>
-	<nav class="navbar navbar-default">
-		<h1>Add new client to HMO</h1>
-	</nav>
+    <h1>Add new client to HMO</h1>
+    <h2 >please fill in the client's details:</h2>
 	<div class="jumbotron">
-		<form class="form-group" onsubmit= "return check()" action="/addNewClient" method="post">
-			<label >please fill in the client's details:</label>
-            <br>
+
+        <form class="form-group" onsubmit="return check()" action="/addNewClient" method="post">
             <label>First name</label>
-			<input type="text" id="namee" name="fname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters" ><br>
+            <input type="text" id="namee" name="fname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters" ><br>
             <label>Last name</label>
             <input type="text" name="lname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters"  ><br>
             <label>ID</label>
             <input type="text" id="idC" name="id" size=9 class="form-control" required pattern="[0-9]{9}" title="id contain exactly 9 numbers" ><br>
             <label>Birthday</label>
-            <input type="date" name="bday" id="biday" class="form-control" required  ><br>
-<!--            required-->
+            <input type="date" name="bday" id="biday" class="form-control" required >
             <span id="message1" style="color:red"></span><br>
             <label>Address</label>
-            <input type="text" name="street" placeholder="street" class="form-control" required pattern="[A-Za-z]*" title="Street contain only letters" >
+            <input type="text" name="street" placeholder="street" class="form-control" required pattern="[A-Za-z\s]*" title="Street contain only letters and spaces" >
             <input type="text" name="number" placeholder="number" class="form-control" required pattern="[0-9]*" title="Street's number contain numbers" >
-            <input type="text" name="city"   placeholder="city" class="form-control" required  pattern="[A-Za-z]*" title="City contain only letters"><br>
+            <input type="text" name="city"   placeholder="city" class="form-control"  required pattern="[A-Za-z\s]*" title="City contain only letters and spaces"><br>
             <label>Telephone</label>
-            <input type="tel" name="tel" size="9" class="form-control" required pattern="[0-9]{9}"  title="Telephone contain exactly 9 numbers"><br>
+            <input type="tel" name="tel" size="9" class="form-control" required  pattern="[0-9]{9}"  title="Telephone contain exactly 9 numbers"><br>
             <label>Phone</label>
             <input type="tel" name="phone" size=10 class="form-control" required pattern="[0-9]{10}"title="Phone contain exactly 10 numbers" ><br>
             <label>Covid Positive Date</label>
-             <input type="date" id="positiveDate" name="positiveDate" class="form-control"><br>
+            <input type="date" id="positiveDate" name="positiveDate" class="form-control">
             <span id="message2" style="color:red"></span><br>
+
             <label>Covid Recovery Date</label>
-             <input type="date" id="recoveryDate" name="recoveryDate" class="form-control"><br>
+            <input type="date" id="recoveryDate" name="recoveryDate" class="form-control">
             <span id="message3" style="color:red"></span><br>
             <span id="message4" style="color:red"></span><br>
-            <br>
-             <label>get first vaccine?</label>
+
+            <label>get first vaccine?</label>
             <input type="radio" name ="get1" value="Yes"/>Yes
             <input type="radio" name ="get1" value="No" checked/>No<br>
 
@@ -78,9 +204,10 @@
                 <option value="Pfizer">Pfizer</option>
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
-            </select><br>
+            </select>
             <label>get vaccine Date</label>
-             <input type="date" id="vacd1" name="vaccineDate1"  class="form-control"><br>
+             <input type="date" id="vacD1" name="vaccineDate1"  class="form-control"><br>
+            <span id="vaccine1" style="color:red"></span><br>
 
             <label>get second vaccine?</label>
             <input type="radio" name ="get2" value="Yes"/>Yes
@@ -92,12 +219,13 @@
                 <option value="Pfizer">Pfizer</option>
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
-            </select><br>
+            </select>
             <label>get vaccine Date</label>
-             <input type="date" id="vacd2" name="vaccineDate2"  class="form-control"><br>
+            <input type="date" id="vacD2" name="vaccineDate2"  class="form-control"><br>
+            <span id="vaccine2" style="color:red"></span><br>
 
-             <label>get third vaccine?</label>
-             <input type="radio" name ="get3" value="Yes"/>Yes
+            <label>get third vaccine?</label>
+            <input type="radio" name ="get3" value="Yes"/>Yes
             <input type="radio" name ="get3" value="No" checked/>No<br>
 
             <label for="producer-select3">Choose a producer:</label>
@@ -105,13 +233,14 @@
                 <option value="Pfizer">Pfizer</option>
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
-            </select><br>
+            </select>
 
             <label>get vaccine Date</label>
-             <input type="date" id="vacd3" name="vaccineDate3"  class="form-control"><br>
+            <input type="date" id="vacD3" name="vaccineDate3"  class="form-control"><br>
+            <span id="vaccine3" style="color:red"></span><br>
 
             <label>get fourth vaccine?</label>
-             <input type="radio" name ="get4" value="Yes"/>Yes
+            <input type="radio" name ="get4" value="Yes"/>Yes
             <input type="radio" name ="get4" value="No" checked/>No<br>
 
             <label for="producer-select4">Choose a producer:</label>
@@ -119,11 +248,12 @@
                 <option value="Pfizer">Pfizer</option>
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
-            </select><br>
+            </select>
             <label>get vaccine Date</label>
-             <input type="date" id=vacd4" name="vaccineDate4"  class="form-control"><br>
+            <input type="date" id="vacD4" name="vaccineDate4"  class="form-control"><br>
 
-            <br>
+            <span id="vaccine4" style="color:red"></span><br>
+            <span id="vaccine5" style="color:red"></span><br>
 			<button class="btn btn-primary" type="submit" name="submit" value="add">Submit</button>
 		</form>
 
