--- a/templates/findClient.html
+++ b/templates/findClient.html
@@ -2,31 +2,70 @@
 <html>
 <head>
 	<title>FIND A CLIENT</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!--	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+<!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+<!--	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+<style>
+  	h1
+    {
+        font-family: calibri;
+		font-size: 40px;
+		text-align: center;
+    }
+	label
+	{
+		font-family: calibri;
+		font-size: 25px;
+		text-align: left;
+		font-weight: normal;
+	}
+	input
+	{
+		padding: 12px;
+		border: 1px solid #ccc;
+		border-radius: 4px;
+		resize: vertical;
+		text-align: center;
+	}
+	form
+	{
+		text-align: center;
+		font-family: calibri;
+		font-size: 15px;
+	}
+	 button
+    {
+    	padding =18px 18px;
+    	border-radius: 10px;
+    	border: 1px solid black;
+    	font-size: 32px;
+    	font-family: calibri;
+    	background-color: #8FBC8F;
+    }
+
+</style>
 </head>
 <body>
 	<nav class="navbar navbar-default">
-		<h1>GET CLIENT DETAILS:</h1>
+		<h1>GET CLIENT DETAILS</h1>
 	</nav>
 	<div class="jumbotron">
 		<form class="form-group" action="/findClient" method="post">
-			<label >please fill in the client's id:</label>
-            <br>
-            <label>ID</label>
+			<label>Please enter the client's ID:</label>
             <input type="text" name="id" size=9 class="form-control" required pattern="[0-9]{9}" title="id contain exactly 9 numbers"><br>
             <br>
-			<button class="btn btn-primary" type="submit" name="submit" value="Search">Search</button>
+			<button class="btn btn-primary" type="submsit" name="submit" value="Search">Search</button><br>
+			<br>
+			<div class="failure">
+				{{failure}}
+			</div>
 
 		</form>
 
 	</div>
 
-	<div>
-		{{failure}}
-	</div>
+
 
 </body>
 </html>
